@@ -336,13 +336,13 @@ let test_values = {
       \		'timeout:-1', 'file:/tmp/file', 'expr:Func()', 'double,33'],
       \		['xxx', '-1', 'timeout:', 'best,double', 'double,fast']],
       \ 'splitkeep': [['cursor', 'screen', 'topline'], ['xxx']],
-      \ 'statusline': [['', 'xxx'], ['%$', '%{', '%{%', '%{%}', '%(', '%)']],
+      \ 'statusline': [['', 'xxx'], ['%{', '%{%', '%{%}', '%(', '%)']],
       "\ 'swapsync': [['', 'sync', 'fsync'], ['xxx']],
       \ 'switchbuf': [['', 'useopen', 'usetab', 'split', 'vsplit', 'newtab',
       \		'uselast', 'split,newtab'],
       \		['xxx']],
       \ 'tabclose': [['', 'left', 'uselast', 'left,uselast'], ['xxx']],
-      \ 'tabline': [['', 'xxx'], ['%$', '%{', '%{%', '%{%}', '%(', '%)']],
+      \ 'tabline': [['', 'xxx'], ['%{', '%{%', '%{%}', '%(', '%)']],
       \ 'tagcase': [['followic', 'followscs', 'ignore', 'match', 'smart'],
       \		['', 'xxx', 'smart,match']],
       \ 'termencoding': [has('gui_gtk') ? [] : ['', 'utf-8'], ['xxx']],
